--- a/card-display.html
+++ b/card-display.html
@@ -233,6 +233,7 @@
               if (response) {
                 thatCardDisplay.set("sortByExtOrder", response)
               }
+              return true
             }
           )
         }
