--- a/card-display.html
+++ b/card-display.html
@@ -409,7 +409,15 @@
         ordered_array.push(array[i])
       }
       return ordered_array.sort(function(a, b) {
-        return a.__index - b.__index
+        if (a.hasOwnProperty("__index") && a.hasOwnProperty("__index")) {
+          return a.__index - b.__index
+        } elseif (a.hasOwnProperty("__index")) {
+          return -1
+        } elseif (b.hasOwnProperty("__index")) {
+          return 1
+        } else {
+          return 0
+        }
       })
     }
   })
