--- a/card-display.html
+++ b/card-display.html
@@ -66,7 +66,7 @@
               </template>
               <template is="dom-if" if="{{!isCard(card,'deck')}}">
                 <paper-material elevation="4" class="cardstyle" title="{{card.title}}">
-                  <div data-index="{{index}}" inner-h-t-m-l="{{card._html}}"></div>
+                  <div data-index="{{index}}" inner-h-t-m-l="{{card.__html}}"></div>
                 </paper-material>
               </template>
             </div>
@@ -250,7 +250,7 @@
             }
           }
           cards[i].hidden = this.getCardAttr(cards[i], shared.base, 'hidden')
-          cards[i]._html = this.getHtml(cards[i])
+          cards[i].__html = this.getHtml(cards[i])
         } else {
           cards[i].hidden = true
         }
