--- a/card-display.html
+++ b/card-display.html
@@ -356,7 +356,11 @@
         selected = e.target.dataIndex
       } 
       // get data
-      this.set("deck", this.objectToArray(this.cards[selected].data))
+      if (this.veiwable) {
+        this.set("deck", this.objectToArray(this.hand[selected].data))
+      } else {
+        this.set("deck", this.objectToArray(this.cards[selected].data))
+      }
       this.$.dialDeck.open()
     },
     picked: function(e){
@@ -367,8 +371,15 @@
         selected = e.target.parentElement.dataIndex
       } else if (e.target.hasOwnProperty("dataIndex")) {
         selected = e.target.dataIndex
-      } 
+      }
+      var card
+      if (this.veiwable) {
+        card = this.hand[selected]
+      } else {
+        card = this.cards[selected]
+      }
       this.fire("picked", selected)
+      this.fire("picked-card", card)
     },
     tapped: function(e){
       var selected
@@ -379,7 +390,13 @@
       } else if (e.target.hasOwnProperty("dataIndex")) {
         selected = e.target.dataIndex
       } 
-      this.fire("tapped", {card: this.hand[selected], text: e.target.innerText, tag: e.target.tagName})
+      var card
+      if (this.veiwable) {
+        card = this.hand[selected]
+      } else {
+        card = this.cards[selected]
+      }
+      this.fire("tapped", {card: card, text: e.target.innerText, tag: e.target.tagName})
     },
     orderArray: function (order, array, by) {
       var ordered_array = []
