--- a/card-display.html
+++ b/card-display.html
@@ -18,9 +18,11 @@
         position: absolute;
         background:  var(--button-not-selected-color);
         margin: -150px 56px;
+        opacity: .8;
         color: var(--button-color);
       }
       .iron-selected paper-fab {
+        opacity: 1;
         background: var(--accent-color);
       }
       .container {
