--- a/card-display.html
+++ b/card-display.html
@@ -92,7 +92,7 @@
         </sortable-list>
       </template>
       <template is="dom-if" if="{{selectable}}" restamp>
-        <iron-selector multi selected-values="{{selectedIndex}}">
+        <iron-selector multi selected-values="{{selected}}">
           <template is="dom-repeat" items="{{selectableCards}}" as="card" observe="title data">
             <template is="dom-if" if="{{!card.hidden}}">
               <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
